--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-      background: linear-gradient(135deg, #4e54c8, #8f94fb);
+      background: linear-gradient(135deg, #0077b6, #00b4d8);
       color: #fff;
     }
 
     h1 {
       text-align: center;
-      font-size: 2.5em;
-      margin-bottom: 20px;
+      font-size: 2.8em;
+      margin-bottom: 40px;
     }
 
     #inspectionForm {
-      background: #2e2e48;
-      padding: 30px;
+      background: #023e8a;
+      padding: 40px;
       border-radius: 15px;
       box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
       width: 90%;
-      max-width: 600px;
+      max-width: 650px;
       text-align: center;
     }
 
@@ -42,24 +42,25 @@
     }
 
     .section {
-      margin-bottom: 40px;
-      animation: fadeIn 0.5s ease-in-out;
+      margin-bottom: 50px;
+      animation: fadeIn 1s ease-in-out;
     }
 
     .question {
-      margin-bottom: 20px;
+      margin-bottom: 25px;
     }
 
     .question label {
       display: block;
-      margin-bottom: 10px;
+      margin-bottom: 12px;
       font-weight: 400;
+      color: #fff;
     }
 
     .radio-options {
       display: flex;
       justify-content: center;
-      gap: 20px;
+      gap: 30px;
     }
 
     .radio-options input {
@@ -76,6 +77,7 @@
       font-weight: 600;
       text-transform: uppercase;
       text-align: center;
+      color: #fff;
     }
 
     .navigation {
@@ -89,14 +91,14 @@
       margin-right: 10px;
       border: none;
       border-radius: 8px;
-      background: #4e54c8;
+      background: #00b4d8;
       color: #fff;
       cursor: pointer;
       transition: background 0.3s;
     }
 
     button:hover {
-      background: #8f94fb;
+      background: #0077b6;
     }
 
     button:disabled {
@@ -146,7 +148,7 @@
       <button type="button" id="prevButton" onclick="navigate(-1)" disabled>Anterior</button>
       <button type="button" id="nextButton" onclick="navigate(1)">Próximo</button>
       <button type="submit" id="submitButton" class="hidden">Enviar</button>
-      <button type="button" id="accessHistoryButton" onclick="accessHistory()">Acessar Histórico</button>
+      <button type="button" id="accessHistoryButton" onclick="accessHistory()" class="hidden">Acessar Histórico</button>
     </div>
     <div id="successMessage" class="hidden" style="color: green; margin-top: 20px;">
       Formulário enviado com sucesso!
@@ -325,41 +327,66 @@
         section.questions.forEach((question, questionIndex) => {
           const answer = document.querySelector(`input[name='section${sectionIndex}_q${questionIndex}']:checked`);
           const comment = document.querySelector(`textarea[name='section${sectionIndex}_q${questionIndex}_comment']`).value || '';
+          const image = document.querySelector(`input[name='section${sectionIndex}_q${questionIndex}_image']`).files[0] || null;
 
           data.push({
             date: date,
             section: section.title,
             question: question,
             answer: answer ? answer.value : 'Não respondido',
-            comment: comment
+            comment: comment,
+            image: image ? image.name : 'Nenhuma imagem'
           });
         });
       });
 
-      // Enviar os dados para o Google Sheets via Google Apps Script
-      fetch('https://script.google.com/macros/s/AKfycbw5PsnPfKX0EnrG1zoo-DkEaTMvRWB52H4-Zw7WBFxJDIWus23jTtDbpl2iv9tkrno/exec', {
-        method: 'POST',
-        body: JSON.stringify(data), // Envia os dados no formato JSON
-        headers: { 'Content-Type': 'application/json' }
-      })
-      .then(response => response.text())
-      .then(data => {
-        console.log('Data successfully sent to Google Sheets', data);
-      })
-      .catch((error) => {
-        console.error('Error sending data to Google Sheets:', error);
-      });
+      // Gerar Excel e PDF
+      generateExcel(data);
+      generatePDF(data);
+      document.getElementById('successMessage').classList.remove('hidden');
+      document.getElementById('accessHistoryButton').classList.remove('hidden');
     });
 
-    // Função para acessar o Google Sheets (histórico)
     function accessHistory() {
-      window.open('https://docs.google.com/spreadsheets/d/1uTNs-IW6P-R6r-88Caowj2hRsMwYaXgx9hdhl4NfP0U/edit?gid=0#gid=0', '_blank');
+      window.open('https://docs.google.com/spreadsheets/d/1uTNs-IW6P-R6r-88Caowj2hRsMwYaXgx9hdhl4NfP0U/edit?gid=274641718#gid=274641718', '_blank');
+    }
+
+    function generateExcel(data) {
+      const ws = XLSX.utils.json_to_sheet(data);
+      const wb = XLSX.utils.book_new();
+      XLSX.utils.book_append_sheet(wb, ws, "Relatório");
+      XLSX.writeFile(wb, "Relatório_Inspeção.xlsx");
+    }
+
+    function generatePDF(data) {
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF();
+      doc.setFont('Poppins', 'normal');
+      doc.setFontSize(16);
+      doc.text('Relatório de Inspeção', 10, 10);
+
+      let yOffset = 20;
+      data.forEach(entry => {
+        doc.text(`${entry.date} - ${entry.section}`, 10, yOffset);
+        doc.text(`Pergunta: ${entry.question}`, 10, yOffset + 10);
+        doc.text(`Resposta: ${entry.answer}`, 10, yOffset + 20);
+        doc.text(`Comentário: ${entry.comment}`, 10, yOffset + 30);
+
+        if (entry.image !== 'Nenhuma imagem') {
+          doc.text(`Imagem: ${entry.image}`, 10, yOffset + 40);
+        }
+
+        yOffset += 50;
+      });
+
+      doc.save('Relatório_Inspeção.pdf');
     }
 
     renderSections();
   </script>
 </body>
 </html>
+
 
 
 
